--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,8 @@ main {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: "Outfit", sans-serif;
 }
 
@@ -65,7 +66,7 @@ h3 {
 }
 
 h4 {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 
 button {
@@ -202,11 +203,13 @@ input#rangeValue[type="range"]::-webkit-slider-thumb {
 
 /* Stile del fondo dello slider (Webkit) */
 input#rangeValue[type="range"]::-webkit-slider-runnable-track {
-  background: linear-gradient(to right,
-      #000599 0%,
-      rgb(0, 162, 255) calc(100% * var(--percentage)),
-      rgb(0, 162, 255) calc(100% * var(--percentage)),
-      #00fff0 100%);
+  background: linear-gradient(
+    to right,
+    #000599 0%,
+    rgb(0, 162, 255) calc(100% * var(--percentage)),
+    rgb(0, 162, 255) calc(100% * var(--percentage)),
+    #00fff0 100%
+  );
   height: 26px;
   border-radius: 13px;
 }
@@ -216,7 +219,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
 }
 
-.cont-range ul>li {
+.cont-range ul > li {
   cursor: pointer;
 }
 
@@ -239,7 +242,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   float: right;
 }
 
-#review>div>p.margin-left {
+#review > div > p.margin-left {
   margin-left: 50px;
   font-size: 1.1rem;
 }
@@ -257,7 +260,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input+label {
+#welcome form input + label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -265,7 +268,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input+label::before {
+#welcome form input + label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -277,7 +280,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked+label::before {
+#welcome form input:checked + label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -313,7 +316,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle+circle {
+header circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -381,7 +384,6 @@ header circle+circle {
   border-radius: 31px;
 }
 
-
 #exam p {
   display: inline-block;
 }
@@ -425,7 +427,6 @@ header circle+circle {
   background: linear-gradient(#d20094, #900080);
   border-radius: 31px;
   cursor: pointer;
-
 }
 
 .form-footer {
@@ -447,9 +448,9 @@ header circle+circle {
 #results {
   text-align: center;
   display: none;
-  max-width: 940px;
+  max-width: 830px;
   margin-inline: auto;
-  margin-top: 90px;
+  margin-top: 30px;
   vertical-align: middle;
 }
 
@@ -457,54 +458,68 @@ header circle+circle {
   margin-bottom: 5px;
 }
 
+#results p {
+  font-family: "Outfit", sans-serif;
+  font-size: 1rem;
+}
+
+#results p p {
+  font-family: "Outfit", sans-serif;
+  font-size: 0.8rem;
+}
+
 .cont-results {
-  margin-top: 50px;
+  margin-top: 20px;
+  vertical-align: middle;
+  line-height: normal;
+  border: 1px solid red;
+  width: 828px;
+  height: 420px;
 }
 
 .result-grafic {
   width: 400px;
-  height: 500px;
+  height: 420px;
   color: white;
   text-align: center;
   display: inline-block;
-  vertical-align: sub;
-  margin-inline: 50px;
-  vertical-align: middle;
+  margin-inline: 20px;
 }
 
 .result-grafic svg {
   stroke: #c2128d;
   width: 400px;
   height: 400px;
+  filter: drop-shadow(5px 7px 10px #333);
 }
 
 .result-grafic circle {
-  stroke-width: 60;
-  stroke-dasharray: 1004.8;
+  stroke-width: 50;
+  stroke-dasharray: 879.2;
   fill: transparent;
   /* transform-origin: top; */
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #00ffff;
-  stroke-width: 61;
-  stroke-dasharray: 1004.8;
+  stroke-width: 50;
+  stroke-dasharray: 879.2;
 }
 
-.result-grafic circle+circle {
-  stroke-dasharray: 702.4 1004.8;
+.result-grafic circle + circle {
+  stroke-dasharray: 702.4 879.2;
 }
 
 .resutGrafic-text {
   position: absolute;
-  margin-top: 130px;
-  margin-left: 100px;
+  margin-top: 140px;
+  margin-left: 110px;
 }
 
 .resutGrafic-text p {
-  max-width: 200px;
+  max-width: 180px;
 }
 
 .exam-not-approved {
@@ -532,18 +547,18 @@ header circle+circle {
   margin: 50px auto;
 }
 
-#review>div {
+#review > div {
   border-bottom: 2px solid white;
   margin-block: 30px;
   text-align: left;
 }
 
-#review>div>p {
+#review > div > p {
   padding: 10px 10px 10px 0;
   transition: display 2s;
 }
 
-#review>div>p.hiddenAnswer {
+#review > div > p.hiddenAnswer {
   display: none;
 }
 
@@ -614,7 +629,7 @@ i.fa-solid.fa-check {
   margin-bottom: 70px;
 }
 
-#feedback #img-stelle>img.selected-stars {
+#feedback #img-stelle > img.selected-stars {
   filter: none;
 }
 
