--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,13 +203,11 @@ input#rangeValue[type="range"]::-webkit-slider-thumb {
 
 /* Stile del fondo dello slider (Webkit) */
 input#rangeValue[type="range"]::-webkit-slider-runnable-track {
-  background: linear-gradient(
-    to right,
-    #000599 0%,
-    rgb(0, 162, 255) calc(100% * var(--percentage)),
-    rgb(0, 162, 255) calc(100% * var(--percentage)),
-    #00fff0 100%
-  );
+  background: linear-gradient(to right,
+      #000599 0%,
+      rgb(0, 162, 255) calc(100% * var(--percentage)),
+      rgb(0, 162, 255) calc(100% * var(--percentage)),
+      #00fff0 100%);
   height: 26px;
   border-radius: 13px;
 }
@@ -219,7 +217,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
 }
 
-.cont-range ul > li {
+.cont-range ul>li {
   cursor: pointer;
 }
 
@@ -242,7 +240,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   float: right;
 }
 
-#review > div > p.margin-left {
+#review>div>p.margin-left {
   margin-left: 50px;
   font-size: 1.1rem;
 }
@@ -260,7 +258,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input + label {
+#welcome form input+label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -268,7 +266,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input + label::before {
+#welcome form input+label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -280,7 +278,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked + label::before {
+#welcome form input:checked+label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -316,7 +314,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle + circle {
+header circle+circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -463,7 +461,7 @@ header circle + circle {
   font-size: 1rem;
 }
 
-#results p p {
+#results p span {
   font-family: "Outfit", sans-serif;
   font-size: 0.8rem;
 }
@@ -484,6 +482,7 @@ header circle + circle {
   text-align: center;
   display: inline-block;
   margin-inline: 20px;
+  border: 1px solid white;
 }
 
 .result-grafic svg {
@@ -491,6 +490,7 @@ header circle + circle {
   width: 400px;
   height: 400px;
   filter: drop-shadow(5px 7px 10px #333);
+  border: 1px solid white;
 }
 
 .result-grafic circle {
@@ -500,7 +500,7 @@ header circle + circle {
   /* transform-origin: top; */
 }
 
-.result-grafic circle + circle {
+.result-grafic circle+circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #00ffff;
@@ -508,7 +508,7 @@ header circle + circle {
   stroke-dasharray: 879.2;
 }
 
-.result-grafic circle + circle {
+.result-grafic circle+circle {
   stroke-dasharray: 702.4 879.2;
 }
 
@@ -516,6 +516,7 @@ header circle + circle {
   position: absolute;
   margin-top: 140px;
   margin-left: 110px;
+  border: 1px solid white;
 }
 
 .resutGrafic-text p {
@@ -530,6 +531,8 @@ header circle + circle {
 .answer-result {
   max-width: 200px;
   display: inline-block;
+  border: 1px solid white;
+  height: 100%;
 }
 
 .corrects-result {
@@ -547,18 +550,18 @@ header circle + circle {
   margin: 50px auto;
 }
 
-#review > div {
+#review>div {
   border-bottom: 2px solid white;
   margin-block: 30px;
   text-align: left;
 }
 
-#review > div > p {
+#review>div>p {
   padding: 10px 10px 10px 0;
   transition: display 2s;
 }
 
-#review > div > p.hiddenAnswer {
+#review>div>p.hiddenAnswer {
   display: none;
 }
 
@@ -629,7 +632,7 @@ i.fa-solid.fa-check {
   margin-bottom: 70px;
 }
 
-#feedback #img-stelle > img.selected-stars {
+#feedback #img-stelle>img.selected-stars {
   filter: none;
 }
 
