--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,11 +203,13 @@ input#rangeValue[type="range"]::-webkit-slider-thumb {
 
 /* Stile del fondo dello slider (Webkit) */
 input#rangeValue[type="range"]::-webkit-slider-runnable-track {
-  background: linear-gradient(to right,
-      #000599 0%,
-      rgb(0, 162, 255) calc(100% * var(--percentage)),
-      rgb(0, 162, 255) calc(100% * var(--percentage)),
-      #00fff0 100%);
+  background: linear-gradient(
+    to right,
+    #000599 0%,
+    rgb(0, 162, 255) calc(100% * var(--percentage)),
+    rgb(0, 162, 255) calc(100% * var(--percentage)),
+    #00fff0 100%
+  );
   height: 26px;
   border-radius: 13px;
 }
@@ -217,7 +219,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
 }
 
-.cont-range ul>li {
+.cont-range ul > li {
   cursor: pointer;
 }
 
@@ -240,7 +242,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   float: right;
 }
 
-#review>div>p.margin-left {
+#review > div > p.margin-left {
   margin-left: 50px;
   font-size: 1.1rem;
 }
@@ -258,7 +260,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input+label {
+#welcome form input + label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -266,7 +268,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input+label::before {
+#welcome form input + label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -278,7 +280,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked+label::before {
+#welcome form input:checked + label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -314,7 +316,7 @@ header circle {
   /* transform-origin: top; */
 }
 
-header circle+circle {
+header circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -459,6 +461,7 @@ header circle+circle {
 #results p {
   font-family: "Outfit", sans-serif;
   font-size: 1rem;
+  margin: 0 auto;
 }
 
 #results p span {
@@ -468,7 +471,6 @@ header circle+circle {
 
 .cont-results {
   margin-top: 20px;
-  border: 1px solid red;
   width: 828px;
   position: relative;
 }
@@ -480,7 +482,7 @@ header circle+circle {
   text-align: center;
   display: inline-block;
   margin-inline: 20px;
-  border: 1px solid white;
+  position: relative;
 }
 
 .result-grafic svg {
@@ -488,7 +490,6 @@ header circle+circle {
   width: 400px;
   height: 400px;
   filter: drop-shadow(5px 7px 10px #333);
-  border: 1px solid white;
 }
 
 .result-grafic circle {
@@ -498,7 +499,7 @@ header circle+circle {
   /* transform-origin: top; */
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #00ffff;
@@ -506,15 +507,14 @@ header circle+circle {
   stroke-dasharray: 879.2;
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   stroke-dasharray: 702.4 879.2;
 }
 
 .resutGrafic-text {
   position: absolute;
   margin-top: 140px;
-  margin-left: 110px;
-  border: 1px solid white;
+  width: 100%;
 }
 
 .resutGrafic-text p {
@@ -529,15 +529,13 @@ header circle+circle {
 .answer-result {
   max-width: 200px;
   display: inline-block;
-  border: 1px solid white;
-  height: 100%;
 }
 
 .corrects-result {
   text-align: left;
   position: absolute;
   top: 50%;
-  transform: translate(-116%, -50%);
+  transform: translate(-100%, -50%);
 }
 
 .wrongs-result {
@@ -554,18 +552,18 @@ header circle+circle {
   margin: 50px auto;
 }
 
-#review>div {
+#review > div {
   border-bottom: 2px solid white;
   margin-block: 30px;
   text-align: left;
 }
 
-#review>div>p {
+#review > div > p {
   padding: 10px 10px 10px 0;
   transition: display 2s;
 }
 
-#review>div>p.hiddenAnswer {
+#review > div > p.hiddenAnswer {
   display: none;
 }
 
@@ -636,7 +634,7 @@ i.fa-solid.fa-check {
   margin-bottom: 70px;
 }
 
-#feedback #img-stelle>img.selected-stars {
+#feedback #img-stelle > img.selected-stars {
   filter: none;
 }
 
