--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ button {
 #your-answers:hover {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
+  border: none;
   color: black;
   cursor: pointer;
 }
@@ -205,7 +206,12 @@ input#rangeValue[type="range"]::-webkit-slider-thumb {
 
 /* Stile del fondo dello slider (Webkit) */
 input#rangeValue[type="range"]::-webkit-slider-runnable-track {
-  background: linear-gradient(to right, #00fff0 0%, rgb(0, 162, 255) 50%, #000599 100%);
+  background: linear-gradient(
+    to right,
+    #00fff0 0%,
+    rgb(0, 162, 255) 50%,
+    #000599 100%
+  );
   height: 26px;
   border-radius: 13px;
 }
@@ -215,7 +221,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
 }
 
-.cont-range ul>li {
+.cont-range ul > li {
   cursor: pointer;
 }
 
@@ -238,7 +244,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
   float: right;
 }
 
-#review>div>p.margin-left {
+#review > div > p.margin-left {
   margin-left: 50px;
   font-size: 1.1rem;
 }
@@ -256,7 +262,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile personalizzato del checkbox */
-#welcome form input+label {
+#welcome form input + label {
   position: relative;
   top: 20px;
   padding-left: 35px;
@@ -264,7 +270,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input+label::before {
+#welcome form input + label::before {
   content: "";
   position: absolute;
   left: 0;
@@ -276,7 +282,7 @@ input#rangeValue[type="range"]::-webkit-slider-runnable-track {
 }
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
-#welcome form input:checked+label::before {
+#welcome form input:checked + label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
   border: none;
@@ -309,7 +315,7 @@ header circle {
   fill: transparent;
 }
 
-header circle+circle {
+header circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #d20094;
@@ -488,7 +494,7 @@ header circle+circle {
   fill: transparent;
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   transform: rotate(90deg) scaleX(-1);
   transform-origin: 50%;
   stroke: #00ffff;
@@ -496,7 +502,7 @@ header circle+circle {
   stroke-dasharray: 879.2;
 }
 
-.result-grafic circle+circle {
+.result-grafic circle + circle {
   stroke-dasharray: 702.4 879.2;
 }
 
@@ -543,18 +549,18 @@ header circle+circle {
   margin: 50px auto;
 }
 
-#review>div {
+#review > div {
   border-bottom: 2px solid white;
   margin-block: 30px;
   text-align: left;
 }
 
-#review>div>p {
+#review > div > p {
   padding: 10px 10px 10px 0;
   transition: display 2s;
 }
 
-#review>div>p.hiddenAnswer {
+#review > div > p.hiddenAnswer {
   display: none;
 }
 
